fix: add event session for create event test